[gd_scene load_steps=8 format=2]

[ext_resource path="res://squadron_scene.gd" type="Script" id=1]
[ext_resource path="res://art/selected_ship.png" type="Texture" id=2]
[ext_resource path="res://art/basic_ship.png" type="Texture" id=3]
[ext_resource path="res://Squadron.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "clicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=2]
script/source = "extends AnimatedSprite

onready var line = $Line2D

	
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.8499, 30.95 )

[node name="nav_lines" type="Node2D"]
script = ExtResource( 1 )

[node name="Squadron" type="Area2D" parent="."]
position = Vector2( 134, 76.75 )
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="Squadron"]
frames = SubResource( 1 )
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Squadron"]
shape = SubResource( 3 )

[node name="ReferenceRect" type="ReferenceRect" parent="Squadron"]
visible = false
show_behind_parent = true
anchor_left = -20.0
anchor_top = -20.0
anchor_bottom = 20.0
margin_left = -20.0
margin_top = -22.0
margin_right = 20.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="new_course_change" from="Squadron" to="." method="_on_Squadron_new_course_change"]
[connection signal="reached_target" from="Squadron" to="." method="_on_Squadron_reached_target"]
